# academic-harness

./: .gitignore  README.md  build_backend.py  pyproject.toml
integrations/pi/: README.md  package-lock.json  package.json
integrations/pi/extensions/: academic-harness.ts
integrations/pi/prompts/: strict-validator-review.md
integrations/pi/skills/academic-review-run/: SKILL.md
integrations/pi/skills/academic-run-task/: SKILL.md
integrations/pi/skills/qoder-cloud-experiment/: SKILL.md
macos/AcademicHarnessApp/: Package.swift
macos/AcademicHarnessApp/Sources/AcademicHarnessApp/: AcademicHarnessApp.swift
scripts/: build-app.sh  generate-app-icon.py
src/academic_harness/: __init__.py  cli.py  index.py  local_ai.py  paths.py  project.py  qoder_adapter.py  qoder_dependency.py  runs.py  timeutil.py  validators.py  yamlio.py
src/academic_harness/executors/: __init__.py  fake.py  hybrid.py  lan.py  local_control.py  qoder_cli.py  qoder_cloud.py
src/academic_harness/kernel/: __init__.py  artifact_registry.py  policy_gate.py  run_context.py  state_machine.py  trace_writer.py
tests/: test_cli.py  test_local_ai.py  test_project_and_runs.py  test_project_status.py  test_qoder_cloud.py  test_qoder_dependency.py  test_yamlio.py
