[project]
name = "academic-harness"
version = "0.1.0"
description = "Local-first academic harness for project tasks, Qoder runs, artifacts, and validators."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
academic-harness = "academic_harness.cli:main"

[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[tool.uv]
package = true
